# easy-release-automation

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  MAINTAINERS.md  README.md  pyproject.toml  report.html  requirements-test.txt  requirements.txt  tox.ini
.github/: pull_request_template.md
.github/workflows/: era-release.yml  release.yml  testing.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md
doc/: features.md  getting_started.md  getting_started_developer.md  getting_started_end_user.md  overview.md  project_integration.md
doc/media/: getting-started-release-config-simple.yml
docker/: Dockerfile.testpipeline  docker-compose-test.yml
era/: release-config.yml
scripts/: era-test-release.sh  setup-era-dev.sh  setup-era-prod.sh  setup-era.sh
src/easy_release_automation/: configuration.py  easy_release_automation.py
src/easy_release_automation/core/: configuration.py  git_handler.py  plugin_executor.py
src/easy_release_automation/core/utils/: yaml_handler.py
src/easy_release_automation/interfaces/: modification_interface.py  validation_interface.py
src/easy_release_automation/plugins/modification/: regex_replacer.py  shell_modifier.py
src/easy_release_automation/plugins/modification/changelog/: changelog_unreleased_setter.py  changelog_version_updater.py
src/easy_release_automation/plugins/modification/configuration_files/: raw_cfg_file_updater.py  yaml_file_updater.py  yaml_file_updater_v2.py
src/easy_release_automation/plugins/modification/python_requirements/: requirements_updater.py  requirements_updater_and_compiler.py
src/easy_release_automation/plugins/validation/: shell_validator.py
src/easy_release_automation/utils/: git_handler.py  logging_wrapper.py  plugin_executor.py
tests/era/: test_unit_topological_sort.py
tests/era/configurations/: test_config_circle_relation.yaml  test_config_default.yaml
tests/era/plugin_execution/: test_plugin_executor.py
tests/plugins/fixtures/: default_config.py
tests/plugins/modification/: test_unit_regex_replacer.py  test_unit_shell_modifier.py
tests/plugins/modification/changelog/: test_unit_changelog_unreleased_setter.py  test_unit_changelog_version_updater.py
tests/plugins/modification/configuration_files/: test_unit_raw_cfg_updater.py  test_unit_yaml_file_updater.py  test_unit_yaml_file_updater_v2.py
tests/plugins/modification/python_requirements/: test_unit_requirements_compiler.py  test_unit_requirements_updater.py
tests/plugins/modification/python_requirements/test_files/: compile_pyproject.toml  requirement_update_pyproject.toml
tests/plugins/utils/: plugin_loader.py
tests/plugins/validation/: test_unit_shell_validator.py
